--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@google-cloud/text-to-speech": "^4.1.0",
+    "@rebass/forms": "^4.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "rebass": "^4.0.7",
+    "theme-ui": "^0.15.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
