--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
     "rebass": "^4.0.7",
     "theme-ui": "^0.15.4",
